Corrección de errores en la inicialización de datos y ajustes en las relaciones ManyToOne
- Se corrigieron errores de sintaxis SQL que impedían la inserción de datos en la tabla 'persons'.
- Se ajustaron las relaciones entre 'Person', 'PersonGroup' y 'escapeGroup' para garantizar la persistencia correcta.
- Se añadió un mensaje de confirmación al guardar las relaciones en la base de datos.
- Se mejoró la estructura del método 'manyToOne' para mayor claridad.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
-    "github.copilot.advanced": {}
+    "github.copilot.advanced": {},
+    "java.jdt.ls.java.home": "C:\\CursoSpringBoot\\jdk-24.0.1"
 }
