--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pruebadevalor.quedadas.escapes</groupId>
@@ -53,8 +53,11 @@
 		</dependency>
 		<dependency>
 			<groupId>jakarta.validation</groupId>
-        	<artifactId>jakarta.validation-api</artifactId>
-        	<version>3.0.0</version> <!-- Versión de Jakarta Validation -->
+        	<artifactId>jakarta.validation-api</artifactId> <!-- Versión de Jakarta Validation -->
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
 
